tests/fixtures/fail/while_let_binding_scope.sc
let next(): Option(i32) = { None }

let main(): i32 = {
  while let Some(value) = next() {
    value
  }
  value
}
